envoy/envoy-config-static.yaml
admin:
  access_log_path: "/tmp/admin_access.log"
  address: 
    socket_address: 
      address: "0.0.0.0"
      port_value: 9901
static_resources: 
  listeners:
    - 
      name: "http_listener"
      address: 
        socket_address: 
          address: "0.0.0.0"
          port_value: 443
      filter_chains:
          filters: 
            - name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                generate_request_id: true
                route_config: 
                  name: "local_route"
                  virtual_hosts: 
                    - 
                      name: "https-route"
                      domains: 
                        - "api.heezy.dev"
                      routes: 
                        - 
                          match: 
                            prefix: "/user_security_service/"
                          route:
                            cluster: "user_security_service_envoy"
                            prefix_rewrite: "/"
                        - 
                          match: 
                            prefix: "/basic_display_service/"
                          route:
                            cluster: "basic_display_service_envoy"
                            prefix_rewrite: "/"

                    -
                      name: "client"
                      domains: 
                        - "heezy.dev"
                      routes: 
                        - 
                          match: 
                            prefix: "/"
                          route:
                            cluster: "web_frontend_service_envoy"
                http_filters:
                  - 
                    name: "envoy.router"
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: "/etc/tls-secret/tls.crt"
                  private_key:
                    filename: "/etc/tls-secret/tls.key"

    -
      name: "user_security_service_envoy-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8786
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                route_config:
                  name: "user_security_service_envoy-svc-http-route"
                  virtual_hosts:
                    -
                      name: "user_security_service_envoy-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "user_security_service"
                http_filters:
                  -
                    name: "envoy.router"


    -
      name: "user_security_db_envoy-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8787
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                route_config:
                  name: "user_security_db_envoy-svc-http-route"
                  virtual_hosts:
                    -
                      name: "user_security_db_envoy-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "user_security_db"
                http_filters:
                  -
                    name: "envoy.router"

    -
      name: "basic_display_service_envoy-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8789
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                route_config:
                  name: "basic_display_service_envoy-svc-http-route"
                  virtual_hosts:
                    -
                      name: "basic_display_service_envoy-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "basic_display_service"
                http_filters:
                  -
                    name: "envoy.router"

    -
      name: "web_frontend_service_envoy-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 8790
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress"
                codec_type: "AUTO"
                route_config:
                  name: "web_frontend_service_envoy-svc-http-route"
                  virtual_hosts:
                    -
                      name: "web_frontend_service_envoy-svc-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "web_frontend_service"
                http_filters:
                  -
                    name: "envoy.router"
  clusters:
    - 
      name: "user_security_service_envoy"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - 
          socket_address: 
            address: "user_security_service_envoy"
            port_value: 8786
    -
      name: "user_security_service"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "localhost"
            port_value: 8080  
    -
      name: "user_security_db_envoy"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "user_security_db_envoy"
            port_value: 8787 
    -
      name: "user_security_db"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "localhost"
            port_value: 15432 
    - 
      name: "basic_display_service_envoy"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - 
          socket_address: 
            address: "basic_display_service_envoy"
            port_value: 8789
    -
      name: "basic_display_service"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        -
          socket_address:
            address: "localhost"
            port_value: 8080
    - 
      name: "web_frontend_service_envoy"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - 
          socket_address: 
            address: "web_frontend_service_envoy"
            port_value: 8790
    - 
      name: "web_frontend_service"
      connect_timeout: "0.25s"
      type: "strict_dns"
      lb_policy: "ROUND_ROBIN"
      hosts:
        - 
          socket_address: 
              address: "192.168.0.5"
              port_value: 3000
